name:          mkweb
version:       1.0.0.0
synopsis:      Generic site generator using Hakyll
homepage:      http://github.com/pjones/mkweb
bug-reports:   http://github.com/pjones/mkweb/issues
license:       BSD2
license-file:  LICENSE
author:        Peter Jones <pjones@devalot.com>
maintainer:    Peter Jones <pjones@devalot.com>
copyright:     Copyright (c) 2013-2017 Peter Jones
category:      Web
tested-with:   GHC == 7.8.4, GHC == 7.10.3, GHC == 8.0.1
build-type:    Simple
cabal-version: >=1.10
description:
  A static site generator that uses Hakyll and forces a layout that I
  use on all of my sites.

--------------------------------------------------------------------------------
flag maintainer
  description: Enable settings for the package maintainer.
  manual: True
  default: False

------------------------------------------------------------------------------
library
  default-language: Haskell2010
  hs-source-dirs: lib
  ghc-options: -Wall -fwarn-incomplete-uni-patterns

  if flag(maintainer)
    ghc-options: -Werror

  exposed-modules:
    Hakyll.MkWeb.Archive
    Hakyll.MkWeb.Author
    Hakyll.MkWeb.Base
    Hakyll.MkWeb.RSS
    Hakyll.MkWeb.Tags
    MkWeb.Types.Author

  build-depends: base       >= 4.4 && < 5.0
               , aeson      >= 1.0 && < 1.3
               , containers >= 0.5 && < 0.6
               , text       >= 1.2 && < 1.3
               , yaml       >= 0.8 && < 0.9
               , hakyll     >= 4.9 && < 4.10
               , bytestring >= 0.8 && < 0.11
               , directory  >= 1.0 && < 1.4
               , time       >= 1.5 && < 1.7
               , hjsmin     >= 0.2 && < 0.3
               , edify      >= 0.1 && < 1.0
               , filepath   >= 1.2 && < 1.5

------------------------------------------------------------------------------
executable mkweb
  default-language: Haskell2010
  hs-source-dirs: src
  main-is: mkweb.hs
  ghc-options: -Wall -fwarn-incomplete-uni-patterns

  if flag(maintainer)
    ghc-options: -Werror

  build-depends: base
               , hakyll
               , mkweb
